# My-CTF-Challenges

./: README.md
2021-AIS3-EOF-Final/Mugyu/: README.md
2021-AIS3-EOF-Final/Mugyu/src/: .gitignore  Makefile  lov3  main.c  main.c.patch
2021-AIS3-EOF-Final/Raffle/: README.md
2021-AIS3-EOF-Final/Raffle/chal/: raffle
2021-AIS3-EOF-Final/Raffle/src/: .gitignore  README.md  gen.py  go.mod  main.go
2022-AIS3-Pre-Exam/Rideti/: README.md
2022-AIS3-Pre-Exam/Rideti/src/: config.nims  rideti.nimble
2022-AIS3-Pre-Exam/Rideti/src/src/: main.nim
2022-AIS3-Pre-Exam/Time Management/: README.md
2022-AIS3-Pre-Exam/Time Management/chal/: chal
2022-AIS3-Pre-Exam/Time Management/src/: Makefile  chal.c  gen_chal.py
2022-AIS3-Pre-Exam/Wakusei/: README.md
2022-AIS3-Pre-Exam/Wakusei/chal/: wakusei
2022-AIS3-Pre-Exam/Wakusei/src/: CMakeLists.txt  build.sh
2022-AIS3-Pre-Exam/Wakusei/src/assembler/: .gitignore  chal.asm  gen.py  m_parser.py
2022-AIS3-Pre-Exam/Wakusei/src/libs/emulator/: CMakeLists.txt
2022-AIS3-Pre-Exam/Wakusei/src/libs/emulator/include/: emulator.h  mcode.h  stack.h
2022-AIS3-Pre-Exam/Wakusei/src/libs/emulator/src/: emulator.cpp  mcode.cpp  stack.cpp
2022-AIS3-Pre-Exam/Wakusei/src/src/: main.cpp
2022-AIS3-Pre-Exam/殼/: README.md
